Update link to new repository location

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="inner">
     <h1><a href="./index.html">LinkChecker</a></h1>
     <h2>Check websites for broken links</h2>
-    <a href="https://github.com/wummel/linkchecker"
+    <a href="https://github.com/linkcheck/linkchecker"
      class="button"><small>View project on</small> GitHub</a>
   </div>
 </header>
