replace old links on website
point to the new orga at least while we figure out namespace issues

Closes: #112

--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
   <div class="inner">
     <h1><a href="./index.html">LinkChecker</a></h1>
     <h2>Check websites for broken links</h2>
-    <a href="https://github.com/wummel/linkchecker"
+    <a href="https://github.com/linkcheck/linkchecker"
      class="button"><small>View project on</small> GitHub</a>
   </div>
 </header>
@@ -49,7 +49,7 @@ the <code>/robots.txt</code> file which follows the
 <a href="http://www.robotstxt.org/robotstxt.html">robots.txt exclusion standard</a>.</p>
 <p>For identification LinkChecker adds to each request a User-Agent header
 like this:</p>
-<div class="codehilite"><pre><span class="n">Mozilla</span><span class="o">/</span>5<span class="p">.</span>0 <span class="p">(</span><span class="n">compatible</span><span class="p">;</span> <span class="n">LinkChecker</span><span class="o">/</span>9<span class="p">.</span>3<span class="p">;</span> <span class="o">+</span><span class="n">http</span><span class="p">:</span><span class="o">//</span><span class="n">wummel</span><span class="p">.</span><span class="n">github</span><span class="p">.</span><span class="n">io</span><span class="o">/</span><span class="n">linkchecker</span><span class="o">/</span><span class="p">)</span>
+<div class="codehilite"><pre><span class="n">Mozilla</span><span class="o">/</span>5<span class="p">.</span>0 <span class="p">(</span><span class="n">compatible</span><span class="p">;</span> <span class="n">LinkChecker</span><span class="o">/</span>9<span class="p">.</span>3<span class="p">;</span> <span class="o">+</span><span class="n">http</span><span class="p">:</span><span class="o">//</span><span class="n">linkcheck</span><span class="p">.</span><span class="n">github</span><span class="p">.</span><span class="n">io</span><span class="o">/</span><span class="n">linkchecker</span><span class="o">/</span><span class="p">)</span>
 </pre></div>
 
 
@@ -135,7 +135,7 @@ After this append a new Logging instance to the fileoutput.</p>
 <aside id="sidebar">
 <h2>Downloads</h2>
 <p>
-<a href="http://wummel.github.io/linkchecker/dist/LinkChecker-9.3.exe"
+<a href="http://linkcheck.github.io/linkchecker/dist/LinkChecker-9.3.exe"
   title="Download Windows .exe installer"
   class="button"><span>LinkChecker-9.3.exe</span></a>
 <a href="http://ftp.debian.org/debian/pool/main/l/linkchecker/"
@@ -145,10 +145,10 @@ After this append a new Logging instance to the fileoutput.</p>
   title="Download Source .tar.gz package"
   class="button"><span>LinkChecker-9.3.tar.gz</span></a>
 </p>
-<p><a href="https://github.com/wummel/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
-<p class="repo-owner"><a href="https://github.com/wummel/linkchecker">LinkChecker</a> is
+<p><a href="https://github.com/linkcheck/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
+<p class="repo-owner"><a href="https://github.com/linkcheck/linkchecker">LinkChecker</a> is
 maintained
-by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
+by <a href="https://github.com/linkcheck">Bastian Kleineidam</a>.</p>
 <h2>Give back</h2>
 <p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -164,7 +164,7 @@ by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
 
 <h2>Support</h2>
 <p>
-<a href="https://github.com/wummel/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
+<a href="https://github.com/linkcheck/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
 </p>
 
 <h2>Documentation</h2>
