--- a/donations.html
+++ b/donations.html
@@ -24,7 +24,7 @@
   <div class="inner">
     <h1><a href="./index.html">LinkChecker</a></h1>
     <h2>Check websites for broken links</h2>
-    <a href="https://github.com/wummel/linkchecker"
+    <a href="https://github.com/linkcheck/linkchecker"
      class="button"><small>View project on</small> GitHub</a>
   </div>
 </header>
@@ -42,7 +42,7 @@ send me some money over paypal or klick the flattr button on the right.</p>
 <aside id="sidebar">
 <h2>Downloads</h2>
 <p>
-<a href="http://wummel.github.io/linkchecker/dist/LinkChecker-9.3.exe"
+<a href="http://linkcheck.github.io/linkchecker/dist/LinkChecker-9.3.exe"
   title="Download Windows .exe installer"
   class="button"><span>LinkChecker-9.3.exe</span></a>
 <a href="http://ftp.debian.org/debian/pool/main/l/linkchecker/"
@@ -52,10 +52,10 @@ send me some money over paypal or klick the flattr button on the right.</p>
   title="Download Source .tar.gz package"
   class="button"><span>LinkChecker-9.3.tar.gz</span></a>
 </p>
-<p><a href="https://github.com/wummel/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
-<p class="repo-owner"><a href="https://github.com/wummel/linkchecker">LinkChecker</a> is
+<p><a href="https://github.com/linkcheck/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
+<p class="repo-owner"><a href="https://github.com/linkcheck/linkchecker">LinkChecker</a> is
 maintained
-by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
+by <a href="https://github.com/linkcheck">Bastian Kleineidam</a>.</p>
 <h2>Give back</h2>
 <p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -71,7 +71,7 @@ by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
 
 <h2>Support</h2>
 <p>
-<a href="https://github.com/wummel/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
+<a href="https://github.com/linkcheck/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
 </p>
 
 <h2>Documentation</h2>
