--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ into.</p>
 <p>Linkchecker has extensive unit tests to ensure code quality.
 <a href="https://travis-ci.org/">Travis CI</a> is used for continuous build
 and test integration.</p>
-<p><a href="https://travis-ci.org/wummel/linkchecker"><img alt="Build Status" src="https://travis-ci.org/wummel/linkchecker.png" /></a></p>
+<p><a href="https://travis-ci.org/linkcheck/linkchecker"><img alt="Build Status" src="https://travis-ci.org/linkcheck/linkchecker.png" /></a></p>
 </section>
 
 <aside id="sidebar">
 <h2>Downloads</h2>
 <p>
-<a href="http://wummel.github.io/linkchecker/dist/LinkChecker-9.3.exe"
+<a href="http://linkcheck.github.io/linkchecker/dist/LinkChecker-9.3.exe"
   title="Download Windows .exe installer"
   class="button"><span>LinkChecker-9.3.exe</span></a>
 <a href="http://ftp.debian.org/debian/pool/main/l/linkchecker/"
@@ -108,10 +108,10 @@ and test integration.</p>
   title="Download Source .tar.gz package"
   class="button"><span>LinkChecker-9.3.tar.gz</span></a>
 </p>
-<p><a href="https://github.com/wummel/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
-<p class="repo-owner"><a href="https://github.com/wummel/linkchecker">LinkChecker</a> is
+<p><a href="https://github.com/linkcheck/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
+<p class="repo-owner"><a href="https://github.com/linkcheck/linkchecker">LinkChecker</a> is
 maintained
-by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
+by <a href="https://github.com/linkcheck">Bastian Kleineidam</a>.</p>
 <h2>Give back</h2>
 <p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -127,7 +127,7 @@ by <a href="https://github.com/wummel">Bastian Kleineidam</a>.</p>
 
 <h2>Support</h2>
 <p>
-<a href="https://github.com/wummel/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
+<a href="https://github.com/linkcheck/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
 </p>
 
 <h2>Documentation</h2>
