cleanup download links

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ and test integration.</p>
 <p>
 <a href="https://packages.debian.org/sid/linkchecker"
   title="Download Debian package"
-  class="button"><span>LinkChecker.deb</span></a>
+  class="button"><span>Debian packages</span></a>
 <a href="https://github.com/linkchecker/linkchecker/releases"
   title="Download Source .tar.gz package"
-  class="button"><span>LinkChecker.tar.gz</span></a>
+  class="button"><span>Source</span></a>
 </p>
 <p><a href="https://github.com/linkchecker/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
 <p class="repo-owner"><a href="https://github.com/linkchecker/linkchecker">LinkChecker</a> is
