propagate index changes to all html pages

--- a/other.html
+++ b/other.html
@@ -24,7 +24,7 @@
   <div class="inner">
     <h1><a href="./index.html">LinkChecker</a></h1>
     <h2>Check websites for broken links</h2>
-    <a href="https://github.com/linkcheck/linkchecker"
+    <a href="https://github.com/linkchecker/linkchecker"
      class="button"><small>View project on</small> GitHub</a>
   </div>
 </header>
@@ -54,36 +54,22 @@ more than 10 years.</p>
 <aside id="sidebar">
 <h2>Downloads</h2>
 <p>
-<a href="http://linkcheck.github.io/linkchecker/dist/LinkChecker-9.3.exe"
-  title="Download Windows .exe installer"
-  class="button"><span>LinkChecker-9.3.exe</span></a>
-<a href="http://ftp.debian.org/debian/pool/main/l/linkchecker/"
-  title="Download Debian installer"
-  class="button"><span>LinkChecker-9.3.deb</span></a>
-<a href="https://pypi.python.org/packages/source/L/LinkChecker/LinkChecker-9.3.tar.gz"
+<a href="https://packages.debian.org/sid/linkchecker"
+  title="Download Debian package"
+  class="button"><span>Debian packages</span></a>
+<a href="https://github.com/linkchecker/linkchecker/releases"
   title="Download Source .tar.gz package"
-  class="button"><span>LinkChecker-9.3.tar.gz</span></a>
+  class="button"><span>Source</span></a>
 </p>
-<p><a href="https://github.com/linkcheck/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
-<p class="repo-owner"><a href="https://github.com/linkcheck/linkchecker">LinkChecker</a> is
+<p><a href="https://github.com/linkchecker/linkchecker/blob/master/doc/changelog.txt">Changelog</a></p>
+<p class="repo-owner"><a href="https://github.com/linkchecker/linkchecker">LinkChecker</a> is
 maintained
-by <a href="https://github.com/linkcheck">Bastian Kleineidam</a>.</p>
-<h2>Give back</h2>
-<p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick"/>
-<input type="hidden" name="hosted_button_id" value="XNUBD7FAG48M6"/>
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal"/>
-</form>
-</p>
-<p>
-<a href="http://flattr.com/thing/1115096/LinkChecker" target="_blank">
-<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a>
-</p>
+by <a href="https://github.com/linkchecker">the Linkchecker team</a> and originally written by Bastian Kleineidam.</p>
+
 
 <h2>Support</h2>
 <p>
-<a href="https://github.com/linkcheck/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
+<a href="https://github.com/linkchecker/linkchecker/issues?state=open">Issue&nbsp;tracker</a><br/>
 </p>
 
 <h2>Documentation</h2>
